syntax = "proto3";

package tieba.hotThreadList;

option java_package = "com.huanchengfly.tieba.post.api.models.protos.hotThreadList";

import "CommonRequest.proto";
import "ThreadInfo.proto";
import "RecommendTopicList.proto";
import "FrsTabInfo.proto";
import "Error.proto";

message HotThreadListRequestData {
  CommonRequest common = 1;
  string tabId = 2;
  string tabCode = 3;
}

message HotThreadListRequest {
  HotThreadListRequestData data = 1;
}

message HotThreadListResponseData {
  repeated RecommendTopicList topicList = 1;
  repeated ThreadInfo threadInfo = 2;
  repeated FrsTabInfo hotThreadTabInfo = 3;
}

message HotThreadListResponse {
  Error error = 1;
  HotThreadListResponseData data = 2;
}